# medical-app-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: README.md  env.py  script.py.mako
alembic/versions/: README.md
scripts/: create_seeder.py  generate_presentation.sh  migrate.sh  seed.py  seed.sh
src/: main.py
src/infrastructure/main/db/: base.py  session.py
src/infrastructure/main/db/seeders/: __init__.py  manifest.json
src/infrastructure/main/db/seeders/default/: 001_base.py  __init__.py
src/infrastructure/main/db/seeders/test/: 001_base.py  __init__.py
src/openapi/: openapi.yaml
src/presentation/main/api/: __init__.py  router.py
src/presentation/main/api/routes/: __init__.py  health.py
src/presentation/main/controllers/: __init__.py  health.py
src/shared/main/config/: __init__.py  database.py
